<resources>

    <string name="app_name">Cash Converter App</string>
    <string name="Button_convert">Convert</string>
    <string name="hint">Tape here...</string>
    <string name="result_box">Result :</string>
    <string name="tx_box">tx...</string>
    <string name="Label_money">Amont of money :</string>
    <string name="Label_tx">tx...</string>
    <string name="curent_monnaie">Current monnaie :</string>
    <string name="dest_monnaie">Dest monnaie :</string>
    <string name="change_monnaie">Currency to modify :</string>
    <string name="Button_change_rate">Modify</string>
    <string name="Label_rate">New rate :</string>
    <string name="Dest_Location">Enter the destination address :</string>
    <string name="Current_location">Current location :</string>
    <string name="Button_locate">Locate</string>
    <string name="Text_waiting_for_dat">...</string>

</resources>