<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amont_Box"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="352dp"
        android:hint="@string/hint"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_amont2"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="360dp"
        android:text="@string/Label_money"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultLocate_Box"
        android:layout_width="317dp"
        android:layout_height="63dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="500dp"
        android:text="@string/Text_waiting_for_dat"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mapsConvertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="72dp"
        android:text="@string/Button_convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="248dp"
        android:text="@string/Button_locate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="184dp"
        android:layout_height="32dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Text_waiting_for_dat"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_currentLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="224dp"
        android:text="@string/Current_location"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_dest"
        android:layout_width="176dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="276dp"
        android:text="@string/Dest_Location"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address_Box"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="276dp"
        android:hint="@string/hint"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="196dp"
        android:layout_height="187dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map" />

</androidx.constraintlayout.widget.ConstraintLayout>